# graffinity-cdi-llm-api

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CITATION.cff  Dockerfile  LICENSE.md  README.md  compose.yml  pyproject.toml
.github/workflows/: linting.yml  tests.yml
src/llm_api/: __init__.py  config.py  gunicorn_conf.py  main.py
src/llm_api/backends/: __init__.py  bedrock.py  openai.py
src/llm_api/routers/: __init__.py  model_calling.py
tests/: __init__.py  conftest.py  test_api.py  test_backends_openai.py  test_dummy.py
tests/fixtures/: backend.py
